      you re-join from the root:
      query.join(['a', 'b']).filter(<crit>).reset_joinpoint().\
      join(['a', 'c']).filter(<some other crit>).all()
      in 0.4 all join() calls start from the "root"
    - added synchronization to the mapper() construction step, to avoid
      thread collections when pre-existing mappers are compiling in a 
      different thread [ticket:613]
    - synonym() properties are fully supported by all Query joining/
      with_parent operations [ticket:598]
    - fixed very stupid bug when deleting items with many-to-many
      uselist=False relations
    - remember all that stuff about polymorphic_union ?  for 
      joined table inheritance ?  Funny thing...
      You sort of don't need it for joined table inheritance, you 
      can just string all the tables together via outerjoin().
      The UNION still applies if concrete tables are involved, 
      though (since nothing to join them on).
    - small fix to eager loading to better work with eager loads
      to polymorphic mappers that are using a straight "outerjoin"
      clause
    - fix to the "column_prefix" flag so that the mapper does not 
      trip over synonyms (and others) that are named after the column's actual
      "key" (since, column_prefix means "dont use the key").
- sql
    - ForeignKey to a table in a schema thats not the default schema
      requires the schema to be explicit; i.e. ForeignKey('alt_schema.users.id')
    - MetaData can now be constructed with an engine or url as the first
      argument, just like BoundMetaData
    - BoundMetaData is now deprecated, and MetaData is a direct substitute.
    - DynamicMetaData has been renamed to ThreadLocalMetaData.  the
      DynamicMetaData name is deprecated and is an alias for ThreadLocalMetaData
      or a regular MetaData if threadlocal=False
    - composite primary key is represented as a non-keyed set to allow for 
      composite keys consisting of cols with the same name; occurs within a