@@ -559,19 +559,19 @@ class TypeMatchTest(testbase.ORMTest):
     def define_tables(self, metadata):
         global a, b, c, d
         a = Table("a", metadata, 
-            Column('id', Integer, primary_key=True),
+            Column('aid', Integer, primary_key=True),
             Column('data', String(30)))
         b = Table("b", metadata, 
-            Column('id', Integer, primary_key=True),
-            Column("a_id", Integer, ForeignKey("a.id")),
+            Column('bid', Integer, primary_key=True),
+            Column("a_id", Integer, ForeignKey("a.aid")),
             Column('data', String(30)))
         c = Table("c", metadata, 
-            Column('id', Integer, primary_key=True),
-            Column("b_id", Integer, ForeignKey("b.id")),
+            Column('cid', Integer, primary_key=True),
+            Column("b_id", Integer, ForeignKey("b.bid")),
             Column('data', String(30)))
         d = Table("d", metadata, 
-            Column('id', Integer, primary_key=True),
-            Column("a_id", Integer, ForeignKey("a.id")),
+            Column('did', Integer, primary_key=True),
+            Column("a_id", Integer, ForeignKey("a.aid")),
             Column('data', String(30)))
     def test_o2m_oncascade(self):
         class A(object):pass
